chapter03_entity/target/debug/build/anyhow-5443518905451854/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/kuwana-taisuke/private/ddd/c3_entity/target/debug/build/anyhow-5443518905451854/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
